--- a/part7/bloglist/package.json
+++ b/part7/bloglist/package.json
@@ -44,6 +44,10 @@
   },
   "proxy": "http://localhost:3003",
   "devDependencies": {
-    "prettier": "2.7.1"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "tailwindcss": "^3.2.2"
   }
 }
