--- a/part9/package.json
+++ b/part9/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "ts-node": "ts-node",
     "calculateBmi": "ts-node bmiCalculator.ts",
@@ -12,6 +14,11 @@
   "author": "Lauri Rautiala",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.11.9"
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.9",
+    "ts-node-dev": "^2.0.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
